--- a/.hintrc
+++ b/.hintrc
@@ -16,6 +16,7 @@
         "link-name": "off"
       }
     ],
-    "disown-opener": "off"
+    "disown-opener": "off",
+    "highest-available-document-mode": "off"
   }
 }
